datasets/dataset_txt/scrapy/scrapy_555.txt
Contributor
cclauss commented on Aug 21, 2017
You can have u'strings' or you can have r'strings' but you can not have ur'strings' in Python 3.
flake8 testing of https://github.com/scrapy/scrapy on Python 3.6.2
$ flake8 . --count --select=E901,E999,F821,F822,F823 --show-source --statistics
./docs/conf.py:194:51: E901 SyntaxError: invalid syntax
  ('index', 'Scrapy.tex', ur'Scrapy Documentation',
                                                  ^

./docs/utils/linkfix.py:23:72: E901 SyntaxError: invalid syntax
line_re = re.compile(ur'(.*)\:\d+\:\s\[(.*)\]\s(?:(.*)\sto\s(.*)|(.*))')
                                                                       ^